# h5sh

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  cmd.rs  data.rs  line_editor.rs  main.rs  output.rs  prompt.rs  shell.rs
src/commands/: attr.rs  cat.rs  cd.rs  exit.rs  find.rs  help.rs  inspect.rs  ls.rs  mod.rs  pwd.rs
src/h5/: cache.rs  error.rs  file.rs  mod.rs  object.rs  object_path.rs  path.rs
src/line_editor/: editor.rs  mod.rs  parse.rs  scanner.rs  simple_completer.rs  text_index.rs  text_range.rs
src/line_editor/completion/: completer.rs  mod.rs  simple_completer.rs
src/output/: mod.rs  printer.rs  style.rs  table.rs
tests/: cli.rs
tests/data/: test.h5
tools/: generate_test_data.py
