[package]
name = "h5sh"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"

homepage = "https://github.com/jl-wynen/h5sh"
repository = "https://github.com/jl-wynen/h5sh"
authors = ["Jan-Lukas Wynen"]
license = "MIT"
description = "Interactive shell for HDF5 files"

[dependencies]
anyhow = "1.0"
bumpalo = { version = "3.19", features = ["collections", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
hdf5 = { package = "hdf5-metno", version = "0.10", features = ["f16", "static"] }
indexmap = "2.10"
log = "0.4"
lscolors = { version = "0.20" }
nu-ansi-term = "0.50"
rustyline = { version = "16", default-features = false, features = ["derive", "with-file-history"] }
simple_logger = "5.0"
self-replace = "1"
self_update = { version = "0.42", features = ["compression-zip-deflate"] }
smallvec = { version = "2.0.0-alpha.11", features = ["std"] }
uutils_term_grid = "0.7"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
lto = 'thin'
codegen-units = 1
strip = true

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
# Configure linux builds to use CentOS:
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
