[package]
name = "h5sh"
version = "0.4.0"
edition = "2024"
rust-version = "1.94"

homepage = "https://github.com/jl-wynen/h5sh"
repository = "https://github.com/jl-wynen/h5sh"
authors = ["Jan-Lukas Wynen"]
license = "MIT"
description = "Interactive shell for HDF5 files"

[dependencies]
anyhow = "1.0"
bumpalo = { version = "3.19", features = ["collections", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
indexmap = "2.13"
log = "0.4"
lscolors = { version = "0.21" }
regex = "1.12"
rustyline = { version = "17", default-features = false, features = ["derive", "with-file-history"] }
simple_logger = "5.2"
self-replace = "1.5"
self_update = { version = "0.43", default-features = false, features = ["compression-zip-deflate", "reqwest", "rustls"] }
smallvec = { version = "2.0.0-alpha.12", features = ["std"] }
uutils_term_grid = "0.8"

# We use an old version to be compatible with Cross' CentOS image which
# only has CMake 3.23.1
hdf5 = { package = "hdf5-metno", version = "0.10", features = ["f16", "static"] }
ndarray = "0.16"

[dev-dependencies]
assert_cmd = "2.2.0"
escargot = "0.5.15"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
rexpect = "0.7.0"

[profile.release]
lto = 'thin'
codegen-units = 1
strip = true

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
# Configure linux builds to use CentOS:
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
